--- a/src/main/webapp/html/user/index.html
+++ b/src/main/webapp/html/user/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
     <title>首页</title>
-    <link rel="stylesheet"type="text/css" href="../css/common/bootstrap.min.css">
-    <link rel="stylesheet"type="text/css" href="../css/common/bootstrap-theme.min.css">
-    <link rel="stylesheet"type="text/css" href="../css/common/bootstrap-datetimepicker.min.css">
+    <link rel="stylesheet"type="text/css" href="../../css/common/bootstrap.min.css">
+    <link rel="stylesheet"type="text/css" href="../../css/common/bootstrap-theme.min.css">
+    <link rel="stylesheet"type="text/css" href="../../css/common/bootstrap-datetimepicker.min.css">
 
-    <link rel="stylesheet"type="text/css" href="../css/common/reset.css">
-    <link rel="stylesheet"type="text/css" href="../css/common/common.css">
-    <link rel="stylesheet"type="text/css" href="../css/index.css">
-    <script type="text/javascript" src="../js/common/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="../js/common/bootstrap-datetimepicker.min.js"></script>
+    <link rel="stylesheet"type="text/css" href="../../css/common/reset.css">
+    <link rel="stylesheet"type="text/css" href="../../css/common/common.css">
+    <link rel="stylesheet"type="text/css" href="../../css/index.css">
+    <script type="text/javascript" src="../../js/common/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="../../js/common/bootstrap-datetimepicker.min.js"></script>
 </head>
 <body>
     <div class="header-box"></div>
@@ -35,7 +35,7 @@
             <div class="choice-date">
                 <span class="date-text">租期</span><input readonly placeholder="请选择开始日期" class="date-choice" type="text">
                 <!--<span class="date-to-bg"></span>-->
-                <img src="../images/dateTo.png" alt="至">
+                <img src="../../images/dateTo.png" alt="至">
                 <input readonly  placeholder="请选择结束日期" class="date-choice return-date-choice" type="text">
             </div>
             <input type="submit" class="choice-btn" value="立即选车">
@@ -45,10 +45,10 @@
     <div class="index-tab">
         <table class="public-container index-tab-box">
             <tr>
-                <td><div class="index-tab-common"><img class="tab-img-common" src="../images/tab-model.png"></div></td>
-                <td><div class="index-tab-common"><img class="tab-img-common" src="../images/tab-store.png"></div></td>
-                <td><div class="index-tab-common"><img class="tab-img-common" src="../images/tab-insurance.png"></div></td>
-                <td><div class="index-tab-common index-tab-infinite"><img class="tab-img-common" src="../images/tab-infinite.png"></div></td>
+                <td><div class="index-tab-common"><img class="tab-img-common" src="../../images/tab-model.png"></div></td>
+                <td><div class="index-tab-common"><img class="tab-img-common" src="../../images/tab-store.png"></div></td>
+                <td><div class="index-tab-common"><img class="tab-img-common" src="../../images/tab-insurance.png"></div></td>
+                <td><div class="index-tab-common index-tab-infinite"><img class="tab-img-common" src="../../images/tab-infinite.png"></div></td>
             </tr>
         </table>
     </div>
