--- a/src/main/webapp/jsp/system/menu.html
+++ b/src/main/webapp/jsp/system/menu.html
@@ -35,6 +35,12 @@
                     <li><a href="javascript:void(0)" onclick="addTab('个体出租列表','renterList.html')">个体出租列表</a></li>
                 </ul>
             </div>
+            <div title="订单管理">
+                <ul class="easyui-tree">
+                    <li><a href="javascript:void(0)" onclick="addTab('订单列表','${pageContext.request.contextPath}/order/findOrderList/0')">订单列表</a></li>
+                    <li><a href="javascript:void(0)" onclick="addTab('个体出租列表','renterList.html')">个体出租列表</a></li>
+                </ul>
+            </div>
             <div title="门店管理">
                 <ul class="easyui-tree">
                     <li><a href="javascript:void(0)" onclick="addTab('门店列表','#')">门店列表</a></li>
