--- a/src/main/webapp/jsp/system/orderList.html
+++ b/src/main/webapp/jsp/system/orderList.html
@@ -204,7 +204,8 @@
                 type: 1,
                 closeBtn: 1,  // 调试用
                 area: ['600px', '400px'], //宽高
-                content: '<div class="info-content">' +
+                content:
+                    '<div class="info-content">' +
                     '<div class="content-text"><em>图片：</em></div>' +
                     '<a href="../../images/system/488-1.jpg" class="img-big-link" target="_blank"><img class="content-img img-big" src="../../images/system/488-1.jpg"></a>' +
                     '<div class="clearfloat">' +
