--- a/src/main/webapp/jsp/user/index.html
+++ b/src/main/webapp/jsp/user/index.html
@@ -52,35 +52,75 @@
             </tr>
         </table>
     </div>
-    <div class="index-content">
+<!--    <div class="index-content">
         <div class="public-container index-content-box">
             <div class="choice-common">
                 <p class="choice-title">短租自驾</p>
                 <div class="choice-img-common choice-img-1"></div>
                 <p class="choice-desc">24小时轻松取 / 还车</p>
                 <button class="choice-btn">我要租车</button>
-            </div><!--
-             --><div class="choice-common">
+            </div>&lt;!&ndash;
+             &ndash;&gt;<div class="choice-common">
                 <p class="choice-title">短租自驾</p>
                 <div class="choice-img-common choice-img-2"></div>
                 <p class="choice-desc">24小时轻松取 / 还车</p>
                 <button class="choice-btn">我要租车</button>
-            </div><!--
-            --><div class="choice-common">
+            </div>&lt;!&ndash;
+            &ndash;&gt;<div class="choice-common">
                 <p class="choice-title">短租自驾</p>
                 <div class="choice-img-common choice-img-3"></div>
                 <p class="choice-desc">24小时轻松取 / 还车</p>
                 <button class="choice-btn">我要租车</button>
-            </div><!--
-            --><div class="choice-common choice-final">
+            </div>&lt;!&ndash;
+            &ndash;&gt;<div class="choice-common choice-final">
                 <p class="choice-title">短租自驾</p>
                 <div class="choice-img-common choice-img-4"></div>
                 <p class="choice-desc">24小时轻松取 / 还车</p>
                 <button class="choice-btn">我要租车</button>
-            </div><!--
-            -->
+            </div>&lt;!&ndash;
+            &ndash;&gt;-->
         </div>
 
+    </div>
+    <center><br><br><br><span class="hotTiltle"><strong>热门车型大搜罗</strong></span><br><span class="hotfont">HOT车型，实时更新随看随租，值得您关注</span><br><br></center>
+    <div class="hotbox">
+
+        <div class="hotcar left-float">
+        <span>别克凯越</span><br>
+        <span class="hotfont">别克凯越/三厢/1.6自动  乘坐5人</span><br>
+        <br>
+        <img class="hotimg" src="../../images/car-show-1.jpg">
+    </div>
+        <div class="hotcar left-float">
+            <span>别克凯越</span><br>
+            <span class="hotfont"> 别克凯越/三厢/1.6自动  乘坐5人</span><br>
+            <br>
+            <img class="hotimg" src="../../images/car-show-1.jpg">
+        </div>
+        <div class="hotcar left-float">
+            <span>别克凯越</span><br>
+            <span class="hotfont">别克凯越/三厢/1.6自动  乘坐5人</span><br>
+            <br>
+            <img class="hotimg" src="../../images/car-show-1.jpg">
+        </div>
+        <div class="hotcar left-float">
+            <span>别克凯越</span><br>
+            <span class="hotfont">别克凯越/三厢/1.6自动  乘坐5人</span><br>
+            <br>
+            <img class="hotimg" src="../../images/car-show-1.jpg">
+        </div>
+        <div class="hotcar left-float">
+            <span>别克凯越</span><br>
+            <span class="hotfont"> 别克凯越/三厢/1.6自动  乘坐5人</span><br>
+            <br>
+            <img class="hotimg" src="../../images/car-show-1.jpg">
+        </div>
+        <div class="hotcar left-float">
+            <span>别克凯越</span><br>
+            <span class="hotfont">别克凯越/三厢/1.6自动  乘坐5人</span><br>
+            <br>
+            <img class="hotimg" src="../../images/car-show-1.jpg">
+        </div>
     </div>
 
     <div class="footer-box"></div>
